<resources>
    <string name="app_name">Password Generator App</string>
    <string name="password_generator">Password Generator</string>
    <string name="password">password</string>
    <string name="lower_case_a_z">Lower Case (a-z)</string>
    <string name="numbers_0_9">Numbers (0-9)</string>
    <string name="uppercase_a_z">Uppercase (A-Z)</string>
    <string name="symbols">Symbols (/*+-)</string>
    <string name="generate">Generate</string>
</resources>