<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/softBlue"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/password_generator"
                android:textSize="25sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/border_design"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:hint="@string/password"
                android:paddingHorizontal="15dp"
                android:textIsSelectable="true"
                android:textSize="17sp"
                app:drawableEndCompat="@drawable/ic_copy"
                app:layout_constraintTop_toBottomOf="@id/tvAppName" />

            <CheckBox
                android:id="@+id/checkboxLowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/softBlue"
                android:checked="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/lower_case_a_z"
                app:layout_constraintStart_toStartOf="@id/tvPassword"
                app:layout_constraintTop_toBottomOf="@id/tvPassword" />

            <CheckBox
                android:id="@+id/checkboxNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:buttonTint="@color/softBlue"
                android:fontFamily="sans-serif-black"
                android:text="@string/numbers_0_9"
                app:layout_constraintStart_toStartOf="@id/checkboxLowercase"
                app:layout_constraintTop_toBottomOf="@id/checkboxLowercase" />

            <CheckBox
                android:id="@+id/checkboxUppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:buttonTint="@color/softBlue"
                android:fontFamily="sans-serif-black"
                android:text="@string/uppercase_a_z"
                app:layout_constraintEnd_toEndOf="@id/tvPassword"
                app:layout_constraintStart_toEndOf="@id/checkboxLowercase"
                app:layout_constraintTop_toTopOf="@id/checkboxLowercase" />

            <CheckBox
                android:id="@+id/checkboxSymbols"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:buttonTint="@color/softBlue"
                android:fontFamily="sans-serif-black"
                android:text="@string/symbols"
                app:layout_constraintStart_toStartOf="@id/checkboxUppercase"
                app:layout_constraintTop_toBottomOf="@id/checkboxUppercase" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/generateButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="sans-serif-black"
                android:text="@string/generate"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxSymbols" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>